[gd_scene load_steps=8 format=3 uid="uid://cufofyqncxk0k"]

[ext_resource type="Texture2D" uid="uid://hgqfwqtlkqpn" path="res://nin_sprites.png" id="1_0dun2"]
[ext_resource type="Script" path="res://assets/enemies/bat.gd" id="1_t6ry7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2xn2"]
size = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_taoku"]
size = Vector2(50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwoq7"]
atlas = ExtResource("1_0dun2")
region = Rect2(110, 70, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_32in2"]
atlas = ExtResource("1_0dun2")
region = Rect2(120, 70, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0qph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwoq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32in2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bat" type="CharacterBody2D"]
collision_mask = 3
motion_mode = 1
script = ExtResource("1_t6ry7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
target_desired_distance = 4.0
path_max_distance = 10.0
path_postprocessing = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k2xn2")

[node name="DetectRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
shape = SubResource("RectangleShape2D_taoku")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v0qph")
autoplay = "default"
frame_progress = 0.785119

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="DetectRange" to="." method="_on_detect_range_body_entered"]
[connection signal="body_exited" from="DetectRange" to="." method="_on_detect_range_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
